/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
    //id 'net.fabricmc.fabric-loom' version '1.16.1'
}

repositories {

    flatDir {
        dirs 'libs'
    }
    // 1. Fabric MUST be first for the loader
    maven { 
        url = uri("https://maven.fabricmc.net") 
    }
    maven {
        url = uri("https://fabricmc.net")
    }
    // 2. MavenCentral for standard libraries
    mavenCentral()
    // 3. Sponge for Mixins later
    maven { 
        url = uri("https://repo.spongepowered.org/maven/") 
    }
}

/*apply plugin: 'net.fabricmc.fabric-loom' 
loom {
    customMinecraftMetadata = "${projectDir}/mcDummy/version.json"
}*/
def getGamePath() {
    Properties props = new Properties()
    File configFile = file('locVerifier_settings.properties')
    
    if (configFile.exists()) {
        configFile.withInputStream { props.load(it) }
        // Use the elvis operator (?:) to provide a fallback if the key is missing
        String path = props.getProperty('game_path') ?: "${projectDir}/libs/SectorSpace.jar"
        return file(path).absolutePath 
    } else {
        Path gameDir = Paths.get("").toAbsolutePath(); 
    }
    
    return file("${projectDir}/libs/Sector Space.jar")
}

jar {
    manifest {
        attributes(
            // Point this to your LocVerifierApp or a new Launcher class
            'Main-Class': 'com.sector.bridge.KnotLauncher' 
        )
    }
    // Include your code and UI dependencies
    from sourceSets.main.output
    
    // EXCLUDE Fabric/Game JARs to prevent the Cast Error
    from {
        configurations.runtimeClasspath
            .filter { file -> 
                !file.name.equals("Sector Space.jar") && 
                !file.name.contains("fabric-loader") &&
                !file.name.contains("asm") &&             // Exclude ASM
                !file.name.contains("sponge-mixin")        // Exclude Mixin
            }
            .collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}


dependencies {

    // This 'file(...)' wrapper converts the relative path to an absolute one
    //implementation fileTree(dir: file("${project.rootDir}/libs"), include: ['*.jar'])
    compileOnly files("libs/Sector Space.jar")
 
    implementation fileTree(dir: 'libs', include: ['*.jar'], exclude: ['Sector Space.jar'])

    //compileOnly files('libs/sponge-mixin-0.15.3-mixin.8.7.0.jar')
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
 
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //implementation "org.lwjgl.lwjgl:lwjgl:2.9.3"

    //minecraft "com.sector:dummy:1.21" 
    //minecraft files("mcDummy/dummy.jar")

    // implementation libs.guava
    // This dependency is used by the application.

    // These are required to satisfy Loom's internal checks
    // They won't actually be used if you've disabled the remap tasks
   // add("minecraft", "com.mojang:minecraft:1.21")
   // add("mappings", "net.fabricmc:yarn:1.21+build.1:v2")

    // These are the missing pieces for Knot/ASM to work
    /* implementation name: 'asm-9.9'
    implementation name: 'asm-analysis-9.9'
    implementation name: 'asm-commons-9.9'
    implementation name: 'asm-tree-9.9'
    implementation name: 'asm-util-9.9'
    */
        // MIXIN (The missing piece causing the new crash)
    /*implementation ("net.fabricmc:sponge-mixin:0.15.3+mixin.0.8.7") {
        exclude group: 'org.ow2.asm' // Prevents version conflicts with the ASM above
    }*/
    //implementation name: 'sponge-mixin-0.15.3+mixin.0.8.7'

    //runtimeOnly("net.fabricmc:sponge-mixin:0.15.3+mixin.0.8.7")

    // TINY-MAPPINGS (Fabric uses these for internal organization)
    //implementation "net.fabricmc:tiny-mappings-parser:0.3.0+build.17"
    //implementation "net.fabricmc:access-widener:2.1.0"

    // Core Fabric Loader
    // implementation ("net.fabricmc:fabric-loader:0.18.4")
    // implementation files('app/libs/fabric-loader-0.19.2.jar')
    
    // Sector Space Game JAR as a local dependency
    // compileOnly (files("libs/Sector Space.jar"))


}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    // This tells Java to start Fabric instead of your game/app directly
    mainClass = "net.fabricmc.loader.impl.launch.knot.KnotClient"
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

// Disables Minecraft-specific remap tasks
/* tasks.withType(net.fabricmc.loom.task.RemapJarTask).configureEach {
    enabled = false
}

tasks.withType(net.fabricmc.loom.task.RemapSourcesJarTask).configureEach {
    enabled = false
}

loom {
    // This stops Loom from trying to verify Minecraft with Mojang's servers
    customManifest = "https://githubusercontent.com"
} */